# speedlog

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  todo.md
contrib/: speedlog-collect.service  speedlog-dashboard.service  speedlog.cron  speedlog.timer
docs/: c4model.md  index.md
src/speedlog/: app.py
src/speedlog/static/: index.html
tests/: conftest.py  test_app.py  test_parse_row.py
