[project]
name = "speedlog"
version = "0.1.0"
description = "Minimal internet speed monitoring and dashboard"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
speedlog-dashboard = "speedlog.app:main"

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/speedlog"]
